syntax = "proto3";

package default;

option go_package = "users-service/internal/pb;pb";

message DefaultResponse {
  int64 status = 1;
  string error = 2;
}